# globus-cli

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  Makefile  RELEASING.adoc  changelog.adoc  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini  toxfile.py
.github/: CODEOWNERS  dependabot.yml
changelog.d/: 20220602_153909_sirosen_half_lazy_imports.md  20220624_133604_sirosen_delete_search_index.md  20220803_153655_aaschaer_session_hook_fix.md  20220808_181413_sirosen_add_timer_api_command.md  20220818_112600_aaschaer_task_order.md  20220831_164625_sirosen_lazy_subcommands.md  20220914_214457_sirosen_fix_xfer_dryrun.md  20220916_134333_sirosen_gcp_commands.md  20221013_171820_sirosen_paginated_flow_list.md  20221013_213932_sirosen_add_flows_api_command.md  20221020_103428_aaschaer_user_credential.md  20221101_210125_sirosen_further_deprecate_endpoint_create.md  20221102_023238_sirosen_add_delete_flow.md  20221102_031847_sirosen_add_show_flow.md  20221102_223217_sirosen_timer_prompt.md  20221110_101524_kurtmckee_support_python_3_11.md  20221114_150538_kurtmckee_start_a_flow_sc_18428.md  20221115_111518_aaschaer_entity_type.md  20221117_103859_aaschaer_recursive_filter.md  20221205_180026_sirosen_bugfix_list_commands.md  20221206_085304_ada_fix_typo.md  20221206_095021_aaschaer_session_show.md  20221206_163612_aaschaer_auth_policy.md  20230109_172604_sirosen_consolidate_endpointish_setattr.md  20230119_101556_kurtmckee_test_performance.md  20230120_091312_kurtmckee_test_performance.md  20230207_054708_sirosen_user_message_support.md  20230213_184034_sirosen_fix_multi_query_param.md  20230214_030123_sirosen_strictly_enforce_static_scopes.md  20230221_220357_sirosen_timer_scope_dep.md  20230228_235916_sirosen_annotate_task_commands.md  20230306_175210_sirosen_use_packaging.md  20230314_115615_sirosen_enable_timer_delete.md  20230314_120621_sirosen_cmdprompt_quoting_fix.md  20230315_163544_sirosen_nicer_missing_login_errors.md  20230321_115826_aaschaer_include.md  20230425_113612_ada.md  20230428_145814_sirosen_improve_jsonstringorfile.md  20230428_165835_sirosen_bugfix_server_timing.md  20230606_141941_aaschaer_local_user.md  (+119 more)
reference/: _generate.py
scripts/: check_future_annotations.py  ensure_min_python_is_tested.py  set_dev_version.py  update_dependencies.py  update_mypy.py
src/globus_cli/: types.py  (+7 more)
tests/: click_types.py  conftest.py
(+351 files in other folders)
